fix(events): adjust alignment of attendance status text
At smaller screen widths, the 276px offset is not enough and it gets
pushed past the edge of the event, causing a scrollbar to appear.

--- a/intranet/static/css/events.scss
+++ b/intranet/static/css/events.scss
@@ -111,16 +111,13 @@
 .attend-status {
     color: gray;
     position: absolute;
-    left: 270px;
+    right: 0px;
     max-width: 280px;
     white-space: nowrap;
 
     .bottom-row.show-attend & {
         width: 280px;
     }
-
-    position: absolute;
-    left: 270px;
 }
 
 .signup-status {
